fixes cropped logos on mobile

--- a/public/assets/css/one.style.css
+++ b/public/assets/css/one.style.css
@@ -939,7 +939,7 @@ a.block-link {
 #brave-hero-cd .text-group-logo-CD {
   background: url('../img/CD_BR_logos.svg') left center / cover no-repeat;
   width: 450px;
-  height: 80px;
+  height: 64px;
   margin-bottom: 1em;
 }
 
